--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,7 @@
 }
 .imgscale {
 	width: 100%;
+    max-height: 250px;
 }
 
 div.desc{
@@ -29,3 +30,4 @@ div.desc{
 }
 .video-js {padding-top: 56.25%}
 .vjs-fullscreen {padding-top: 0px}
+.clickable{ cursor:hand; }
